--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="menu-section menu-section-init" id="menu-section">
-    <div class="box">
+    <div class="box sticky">
         <h1 class="title to-center">Tarea 3</h1>
     </div>
 
@@ -102,15 +102,16 @@
 
     <button type="button" id="apply" class="button is-link to-right">Apply</button>
 
-    <button class="button alternator" id="alternator">
-        <span class="icon is-large" id="alternator-icon">
-            <svg class="alternator-icon" width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <title>Alternator Icon</title>
-                <path d="M321.94 98L158.82 237.78a24 24 0 000 36.44L321.94 414c15.57 13.34 39.62 2.28 39.62-18.22v-279.6c0-20.5-24.05-31.56-39.62-18.18z"/>
-            </svg>
-        </span>
-    </button>
 </div>
+
+<button class="button alternator" id="alternator">
+  <span class="icon is-large" id="alternator-icon">
+      <svg class="alternator-icon" width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <title>Alternator Icon</title>
+          <path d="M321.94 98L158.82 237.78a24 24 0 000 36.44L321.94 414c15.57 13.34 39.62 2.28 39.62-18.22v-279.6c0-20.5-24.05-31.56-39.62-18.18z"/>
+      </svg>
+  </span>
+</button>
 <!-- CANVAS TRHEEJS -->
 <div id="threejsCanvas"></div>
 </body>
