--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="box">
       <span class="label">Cell center</span>
-      <div class="columns">
+      <div class="columns is-mobile">
         <div class="column is-half">
           <!---->
           <div class="custom-row custom-row-left">
