--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="title is-3to-center">Cellular Noise Playground</h1>
     </div>
 
-    <div class="field box">
+    <div class="box">
       <div class="in-line">
         <span class="label">Grill division</span>
         <div class="eye-button" id="eye-button">
@@ -46,6 +46,28 @@
       </div>
       <div class="control">
         <input class="slider slider-normal" type="range" id="grill-division" min="1" max="100" step="1" value="5">
+      </div>
+    </div>
+
+    <div class="box">
+      <span class="label">General</span>
+      <div class="columns is-mobile">
+        <div class="column is-half">
+          <!---->
+          <div class="custom-row custom-row-left">
+            Speed
+          </div>
+          <!---->
+        </div>
+        <div class="column is-half">
+          <!---->
+          <div class="custom-row custom-row-right">
+            <div class="control">
+              <input class="slider slider-normal" type="range" id="general-speed" min="0" max="20" step="0.1" value="1">
+            </div>
+          </div>
+          <!---->
+        </div>
       </div>
     </div>
 
@@ -339,6 +361,7 @@
         </div>
       </div>
     </div>
+
     <!--
     <div class="field box">
         <label class="label">Object</label>
