Add movement XY

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="control">
-        <input class="slider slider-normal" type="range" id="grill-division" min="1" max="100" step="1" value="5">
+        <input class="slider slider-normal" type="range" id="grill-division" min="1" max="100" step="1" value="10">
       </div>
     </div>
 
@@ -55,7 +55,15 @@
         <div class="column is-half">
           <!---->
           <div class="custom-row custom-row-left">
-            Speed
+            General Speed
+          </div>
+          <!---->
+          <div class="custom-row custom-row-left">
+            Speed X
+          </div>
+          <!---->
+          <div class="custom-row custom-row-left">
+            Speed Y
           </div>
           <!---->
         </div>
@@ -63,7 +71,19 @@
           <!---->
           <div class="custom-row custom-row-right">
             <div class="control">
-              <input class="slider slider-normal" type="range" id="general-speed" min="0" max="20" step="0.1" value="1">
+              <input class="slider slider-normal" type="range" id="general-speed" min="0" max="10" step="0.1" value="1">
+            </div>
+          </div>
+          <!---->
+          <div class="custom-row custom-row-right">
+            <div class="control">
+              <input class="slider slider-normal" type="range" id="general-speed-x" min="-10" max="10" step="1" value="0">
+            </div>
+          </div>
+          <!---->
+          <div class="custom-row custom-row-right">
+            <div class="control">
+              <input class="slider slider-normal" type="range" id="general-speed-y" min="-10" max="10" step="1" value="0">
             </div>
           </div>
           <!---->
