--- a/index.html
+++ b/index.html
@@ -368,6 +368,17 @@
             Mouse as point
           </div>
           <!---->
+          <div class="custom-row custom-row-left">
+          </div>
+          <!---->
+          <div class="custom-row custom-row-left">
+            Hungry mouse
+          </div>
+          <!---->
+          <div class="custom-row custom-row-left">
+            Radius
+          </div>
+          <!---->
         </div>
         <div class="column is-half">
           <!---->
@@ -376,6 +387,22 @@
               <input type="checkbox" id="mouse-as-point">
               <span class="switch-slider round"></span>
             </label>
+          </div>
+          <!---->
+          <div class="custom-row custom-row-right">
+          </div>
+          <!---->
+          <div class="custom-row custom-row-right">
+            <label class="switch">
+              <input type="checkbox" id="mouse-hungry">
+              <span class="switch-slider round"></span>
+            </label>
+          </div>
+          <!---->
+          <div class="custom-row custom-row-right">
+            <div class="control">
+              <input class="slider slider-normal" type="range" id="mouse-hungry-radius" min="1" max="100" step="0.01" value="25">
+            </div>
           </div>
           <!---->
         </div>
