--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./css/slider.css">
     <link rel="stylesheet" href="./css/switch.css">
-    <title>Tarea 3 GPU</title>
+    <title>Cellular Noise</title>
 </head>
 <body>
 <div class="menu-section menu-section-init" id="menu-section">
